# cyber-zen

./: .gitignore  LICENSE  README.md  custom-statistics.html  index.html  logs.html  package.json  pnpm-lock.yaml  postcss.config.cjs  settings.html  sprite-studio.html  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/updater/: generate-latest-json.mjs
src/: App.tsx  customStatistics.tsx  index.css  logs.tsx  main.tsx  settings.tsx  spriteStudio.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray_menu.rs
src-tauri/src/commands/: achievements.rs  app_icons.rs  autostart.rs  click_heatmap.rs  custom_statistics_templates.rs  input.rs  logs.rs  merit.rs  mod.rs  notifications.rs  perf.rs  permissions.rs  settings.rs  skins.rs  updater.rs  window.rs
src-tauri/src/core/: active_app.rs  activity.rs  app_icons.rs  app_log.rs  app_updater.rs  auto_updater.rs  click_heatmap.rs  date_key.rs  history_db.rs  input_listener.rs  intern.rs  key_codes.rs  keyboard_piano.rs  macos_event_tap.rs  macos_permissions.rs  main_window_bounds.rs  merit_batcher.rs  merit_storage.rs  mod.rs  mouse_distance.rs  notification_env.rs  perf.rs  persistence.rs  ui_emit.rs  window_placement.rs  wooden_fish_skins.rs
src-tauri/src/core/window_manager/: macos.rs  mod.rs
src-tauri/src/models/: achievements.rs  click_heatmap.rs  custom_statistics_template.rs  merit.rs  mod.rs  settings.rs  statistics.rs  window_placement.rs
src/hooks/: useAchievementUnlocker.ts  useAchievementsSync.ts  useAppLocaleSync.ts  useAutoFade.ts  useCustomWoodenFishSkins.ts  useDailyReset.ts  useDisplayMonitors.ts  useGlobalShortcuts.ts  useInputListener.ts  useInputMonitoringPermission.ts  useKeyboardPiano.ts  useMediaQuery.ts  useMeritPopQueue.ts  useSettingsSync.ts  useWindowDragGesture.ts  useWindowDragging.ts
(+120 files in other folders)
