[package]
name = "cyber-zen"
version = "0.1.17"
description = "一个基于 Tauri 2 + React + Vite 的桌面悬浮「木鱼」应用"
authors = ["Litt1eQ"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Some upstream macros (e.g. from objc via tauri-nspanel) expand `cfg(feature = "cargo-clippy")`
# into the destination crate; defining it here prevents `unexpected_cfgs` warnings.
cargo-clippy = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cyber_zen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22"
parking_lot = "0.12"
once_cell = "1.19"
rdev = "0.5.3"
rand = { version = "0.8", features = ["small_rng"] }
tokio = { version = "1", features = ["time"] }
zip = { version = "4", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.45", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
